fixed overlay alignment
flex start

--- a/css/_navoverlay.scss
+++ b/css/_navoverlay.scss
@@ -23,7 +23,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     padding-left: 150px;
     padding-top: 190px;
   }
