--- a/css/style.css
+++ b/css/style.css
@@ -640,9 +640,9 @@ nav span #burger:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   padding-left: 150px;
   padding-top: 190px;
 }
